<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
  <item 
    android:id="@+id/update"
    android:title="@string/update"
    android:icon="@drawable/update32"
    />
  <item 
    android:id="@+id/score"
    android:title="@string/score"
    android:icon="@drawable/score32"
    />
  <item 
    android:id="@+id/payer"
    android:title="@string/payer"
    android:icon="@drawable/payer"
      />
  <item 
    android:id="@+id/guide"
    android:title="@string/guide_"
    android:icon="@drawable/guide32"
    />
   <item 
    android:id="@+id/aide"
    android:icon="@drawable/aide32"
    android:title="@string/aide"  
    />
  <item 
    android:id="@+id/quitter"
    android:title="@string/quitter"
    android:icon="@drawable/quitter32"
    />
</menu>
